# scotty-transporter

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  Vagrantfile  transporter.service
ansible/: site.yml
ansible/roles/transporter/tasks/: fpm.yml  main.yml  rust.yml
deb/: pack.sh
example/: transporter.conf
src/: beam.rs  config.rs  error.rs  index.html  main.rs  scotty.rs  server.rs  storage.rs
