[package]

name = "transporter"
version = "0.8.0"
authors = ["Roey Darwish Dror <roey.ghost@gmail.com>"]

[dependencies]
byteorder = "*"
docopt = "*"
fern = "*"
log = "*"
rustc-serialize = "*"
url = "*"
hyper = "*"
time = "*"
rust-crypto = "*"
quick-error = "*"
regex = "*"

[dependencies.sentry]
git = "https://github.com/r-darwish/rust-sentry.git"
