[package]

name = "transporter"
version = "0.8.0"
authors = ["Roey Darwish Dror <roey.ghost@gmail.com>"]

[dependencies]
byteorder = "*"
docopt = "0.7.*"
fern = "0.3.*"
log = "0.3.*"
rustc-serialize = "*"
url = "*"
reqwest = "*"
time = "*"
rust-crypto = "*"
quick-error = "*"
regex = "*"
sentry = "0.3.0-beta"
openssl-probe = "*"